--- a/2020/requirements.txt
+++ b/2020/requirements.txt
@@ -1,4 +1,4 @@
-advent-of-code-data==0.8.5
+advent-of-code-data==0.9.3
 appdirs==1.4.4
 beautifulsoup4==4.9.3
 black==20.8b1
@@ -11,6 +11,7 @@ numpy==1.19.4
 pathspec==0.8.1
 Pebble==4.5.3
 python-dateutil==2.8.1
+pytz==2020.4
 regex==2020.11.13
 requests==2.25.0
 six==1.15.0
@@ -19,4 +20,5 @@ termcolor==1.1.0
 toml==0.10.2
 typed-ast==1.4.1
 typing-extensions==3.7.4.3
+tzlocal==2.1
 urllib3==1.26.2
