--- a/2021/requirements.txt
+++ b/2021/requirements.txt
@@ -1,27 +1,24 @@
-advent-of-code-data==1.1.0
-appdirs==1.4.4
-beautifulsoup4==4.9.3
-black==20.8b1
-certifi==2020.11.8
-chardet==3.0.4
-click==7.1.2
-idna==2.10
-mccabe==0.6.1
+advent-of-code-data==1.1.1
+beautifulsoup4==4.10.0
+black==21.11b1
+certifi==2021.10.8
+charset-normalizer==2.0.8
+click==8.0.3
+idna==3.3
 mypy-extensions==0.4.3
-numpy==1.19.4
-pathspec==0.8.1
-Pebble==4.5.3
-pycodestyle==2.6.0
-pyflakes==2.2.0
-python-dateutil==2.8.1
-pytz==2020.4
-regex==2020.11.13
-requests==2.25.0
-six==1.15.0
-soupsieve==2.0.1
+numpy==1.21.4
+pathspec==0.9.0
+Pebble==4.6.3
+platformdirs==2.4.0
+python-dateutil==2.8.2
+pytz-deprecation-shim==0.1.0.post0
+regex==2021.11.10
+requests==2.26.0
+six==1.16.0
+soupsieve==2.3.1
 termcolor==1.1.0
-toml==0.10.2
-typed-ast==1.4.1
-typing-extensions==3.7.4.3
-tzlocal==2.1
-urllib3==1.26.5
+tomli==1.2.2
+typing_extensions==4.0.1
+tzdata==2021.5
+tzlocal==4.1
+urllib3==1.26.7
